iac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
  namespace: wishlist
spec:
  selector:
    app: wishlist
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
