iac/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wishlist-allow-namespace
  namespace: wishlist
spec:
  podSelector:
    matchLabels:
      app: wishlist
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: wishlist
